fixed some z-index issues

--- a/client/views/home/home.less
+++ b/client/views/home/home.less
@@ -1,7 +1,7 @@
 .posts-list {
 	position: relative;
 	top: 1000px;
-	margin-top: 250px;
+	margin-top: 270px;
 	background-color: #fff;
 }
 
