--- a/client/views/layout/layout.less
+++ b/client/views/layout/layout.less
@@ -1,9 +1,8 @@
 .header {
-	position: fixed;
+	position: absolute;
 	text-align: center;
 	margin-top: 40px;
 	width: 100%;
-	z-index: 0;
 
 	img {
 		max-width: 50px;
